--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: "Poppins", sans-serif;
+@layer base {
+    body {
+        font-family: 'Poppins', sans-serif;
+    }
 }
