--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,21 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-        font-family: 'Poppins', sans-serif;
-    }
+  body {
+    font-family: "Poppins", sans-serif;
+  }
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  appearance: none;
+  -moz-appearance: textfield;
 }
